# vahid-bot

./: Dockerfile  build.sh  docker-compose.example.yml  pyproject.toml
src/: bot.py
src/cogs/commands/: admin.py  general.py  vahid.py
